# keen-pbr

./: .clang-tidy  .dockerignore  .gitignore  .gitmodules  AGENTS.md  API.md  CHANGELOG.md  CMakeLists.txt  CNAME  CONTRIBUTING.md  Makefile  PLAN.md  Packages  README.en.md  README.md  STATE.md  conanfile.py  config.example.json  en.search-data.json  example_script.sh  go.mod  go.sum  index.html  index.xml  install.sh  keen-pbr.example.conf  keenetic-pbr.example.conf  llms.txt  main.go  meson.build  meson_options.txt  my-list.txt  openwrt-available-packages  packages.mk  prd.json  progress.txt  repository.mk  ru.search-data.json  ru.search.min.c5b0a9a147fc0491e2259e86f6305b1907192705393b27bd88effb274f1fdb6b.js  site.webmanifest  (+2 more)
.claude/: API_PLAN.md  CONFIG_HASH.md  CONTEXT.md  DEPRECATED.md  DNS_CHECK.md  NETWORK_REFACTOR.md  PLAN.md  REFACTOR_PLAN.md  REST.md  UI.md  UPSTREAMS.md
.claude/plans/: records_cache.md
.codegraph/: IMPLEMENTATION_PLAN.md
.github/: FUNDING.yml  pull_request_template.md
.github/builder/: generate-build-matrix.js  generate_build_matrix.py  generate_openwrt_arch_matrix.py  package.json
.github/scripts/: render_supporters.py
benches/: records_cache_1.txt  records_cache_2.txt  records_cache_3.txt
build_scripts/: build-debian-packages.sh  build-frontend.sh  build-keenetic-package.sh  build-openwrt-package.sh  build-repository.sh  collect-debian.sh  collect-keenetic.sh  collect-openwrt.sh  collect-release-assets.sh  debian.mk  ensure-frontend-dist.sh  find-openwrt-sdk.sh  generate_api_types.sh  generate_repository_page.py  ipk-make-index.py  keenetic.mk  openwrt-sdk-setup.sh  openwrt.mk  prepare-env.sh  repository.mk  resolve-version.sh  run-clang-tidy.sh  run-clangd-tidy.sh  sign-debian-repository.sh  sign-openwrt-repository.sh  verify-debug-artifact.sh
categories/: index.html  index.xml
cmake/: toolchain-aarch64-openwrt.cmake
common/ipk/: conffiles  (+2 more)
config/: keenetic-pbr.conf
converter/: index.html
css/: donation-form.min.2605a2b20c944ec4318f90aa00c3e7290305ca5afebed90c05d4d3143ac0531b.css  language-suggestion.min.72d944667a3a87fcf62ebc0572c11c9b686f4b94a00589dbedda1973f52afc79.css  supporters.min.6688925b999a0b959a7caa4a48124836d700b5f602abc2c19b27345ceb98e2f4.css
docker/: Dockerfile.debian-builder  Dockerfile.keenetic-builder  Dockerfile.openwrt  Dockerfile.openwrt-builder  Dockerfile.packages  build.mk  build.sh  keenetic-build.sh  list_openwrt_targets.py  openwrt-build.sh  openwrt-prepare.sh
docs/: TYPE_GENERATION.md  cli.md  concepts.md  faq.md  go.mod  hugo.yaml  index.html  index.md  index.xml  iptables-atomic-reconcile.md  nftables-atomic-reconcile.md  openapi.yaml  repository-layout.md  rest-api.md  support-this-project.md  troubleshooting.md
en/: index.html  sitemap.xml
entware/: Makefile
frontend/: .gitignore  README.md  index.html  orval.config.ts  package.json  playwright.config.ts  tsconfig.node.json  vite.config.ts
js/: language-suggestion.min.373c9416827ca93781164d2feccb0e396d3accb6eeb2d5d290092f8f79ef39d3.js  yoomoney-donation.min.623737fb6f0ee62af7833562b0ff00d7444447fd5a3ebbd20f49ad7b3e659770.js
keenetic-pbr/: Makefile
lib/: config.go  downloader.go  ipset.go  router.go  summarizer.go  validator.go
ru/: 404.html  index.html  index.xml  llms.txt  sitemap.xml
scripts/: generate_api_types.sh  ipk-make-index.py
src/: CONTEXT.md  PROJECT.md  main.cpp
subprojects/: cpp-httplib.wrap  libnl.wrap  mbedtls.wrap
subprojects/packagefiles/libnl/: meson.build
tags/: index.html  index.xml
tests/: CMakeLists.txt  ManyLists.conf  crash_diagnostics_smoke.cpp  firewall_integration_main.cpp  test_addr_spec.cpp  test_api_runtime_interfaces.cpp  test_api_static.cpp  test_api_status_events.cpp  test_api_test_routing.cpp  test_config_apply_transaction.cpp  test_config_validation.cpp  test_config_writer.cpp  test_conntrack_manager.cpp  test_conntrack_rerouter.cpp  test_control_protocol.cpp  test_crash_diagnostics.cpp  test_cron.cpp  test_disk_config_state.cpp  test_dns_probe_server.cpp  test_dns_server.cpp  test_dns_txt_client.cpp  test_dnsmasq_gen.cpp  test_firewall_reconciler.cpp  test_firewall_verifier.cpp  test_http_client.cpp  test_interface_monitor.cpp  test_iptables_builder.cpp  test_keenetic_dns.cpp  test_keenetic_interface_descriptions.cpp  test_lifecycle_operation.cpp  test_list_parser.cpp  test_list_service.cpp  test_list_set_usage.cpp  test_list_streamer.cpp  test_nftables_builder.cpp  test_operation_coordinator.cpp  test_pid_file.cpp  test_policy_rule.cpp  test_port_spec_util.cpp  test_resolver_apply_confirmation.cpp  (+18 more)
tests/firewall_it/: README.md
tests/firewall_it/docker/: Dockerfile.iptables  Dockerfile.nftables
tests/firewall_it/fixtures/: firewall-iptables-multiport.json  firewall-iptables-multiport.setup.sh  firewall-rule-shapes.json  firewall-smoke.json  firewall-smoke.setup.sh  firewall-table-interface.json  firewall-table-interface.setup.sh  urltest-reachable.json  urltest-reachable.setup.sh
tests/firewall_it/scripts/: run-in-netns.sh  run-suite.sh  urltest_server.py
tests/integration/: test_case_engine.py  test_integration_modules.py  test_qemu_harness.py
tests/integration/container/: case_engine.py  config.json  dns-fixture.py  http-server.py  integration_context.py  probe.py  test-system.py  topology.sh
tests/integration/container/cases/: __init__.py  dns_common.py  dns_no_leak.py  dns_routing_save.py  dns_upstream_ipv4.py  dns_upstream_ipv6.py  multiport_validation.py  route_all_criteria.py  route_dest_addr.py  route_dest_port.py  route_dscp.py  route_list.py  route_proto.py  route_src_addr.py  route_src_port.py  routing_common.py  rule_shapes.py  service_lifecycle.py  sigusr1_no_packet_leak.py  table_interface.py  urltest_rebuild.py
tests/integration/scripts/: run-qemu-suite.sh
tests/integration/vm/: client-run.sh  guest-lib.sh  guest-run.sh  router-run.sh  wan-run.sh
wireframes/: UI.md  config-dns.html  config-general.html  config-lists.html  config-outbounds.html  config-routing-rules.html  configuration.html  diagnostics.html  index.html  overview.html  styles.css
(+1028 files in other folders)
